@@ -286,82 +286,17 @@ operator|++
 index|]
 argument_list|)
 decl_stmt|;
+specifier|final
 name|LockFactory
 name|lockFactory
-decl_stmt|;
-try|try
-block|{
-name|lockFactory
-operator|=
-name|Class
-operator|.
-name|forName
-argument_list|(
-name|lockFactoryClassName
-argument_list|)
-operator|.
-name|asSubclass
-argument_list|(
-name|LockFactory
-operator|.
-name|class
-argument_list|)
-operator|.
-name|newInstance
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IllegalAccessException
-decl||
-name|InstantiationException
-decl||
-name|ClassCastException
-decl||
-name|ClassNotFoundException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-literal|"Cannot instantiate lock factory "
-operator|+
-name|lockFactoryClassName
-argument_list|)
-throw|;
-block|}
-name|File
-name|lockDir
 init|=
-operator|new
-name|File
+name|getNewLockFactory
 argument_list|(
+name|lockFactoryClassName
+argument_list|,
 name|lockDirName
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|lockFactory
-operator|instanceof
-name|FSLockFactory
-condition|)
-block|{
-operator|(
-operator|(
-name|FSLockFactory
-operator|)
-name|lockFactory
-operator|)
-operator|.
-name|setLockDir
-argument_list|(
-name|lockDir
-argument_list|)
-expr_stmt|;
-block|}
 specifier|final
 name|InetSocketAddress
 name|addr
@@ -447,14 +382,6 @@ operator|.
 name|flush
 argument_list|()
 expr_stmt|;
-name|lockFactory
-operator|.
-name|setLockPrefix
-argument_list|(
-literal|"test"
-argument_list|)
-expr_stmt|;
-specifier|final
 name|LockFactory
 name|verifyLF
 init|=
@@ -468,7 +395,6 @@ argument_list|,
 name|out
 argument_list|)
 decl_stmt|;
-specifier|final
 name|Lock
 name|l
 init|=
@@ -550,12 +476,78 @@ parameter_list|(
 name|LockObtainFailedException
 name|e
 parameter_list|)
-block|{         }
+block|{}
 if|if
 condition|(
 name|obtained
 condition|)
 block|{
+if|if
+condition|(
+name|rnd
+operator|.
+name|nextInt
+argument_list|(
+literal|10
+argument_list|)
+operator|==
+literal|0
+condition|)
+block|{
+if|if
+condition|(
+name|rnd
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|verifyLF
+operator|=
+operator|new
+name|VerifyingLockFactory
+argument_list|(
+name|getNewLockFactory
+argument_list|(
+name|lockFactoryClassName
+argument_list|,
+name|lockDirName
+argument_list|)
+argument_list|,
+name|in
+argument_list|,
+name|out
+argument_list|)
+expr_stmt|;
+block|}
+specifier|final
+name|Lock
+name|secondLock
+init|=
+name|verifyLF
+operator|.
+name|makeLock
+argument_list|(
+literal|"test.lock"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|secondLock
+operator|.
+name|obtain
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Double Obtain"
+argument_list|)
+throw|;
+block|}
+block|}
 name|Thread
 operator|.
 name|sleep
@@ -618,6 +610,108 @@ operator|+
 literal|" tries."
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|getNewLockFactory
+specifier|private
+specifier|static
+name|LockFactory
+name|getNewLockFactory
+parameter_list|(
+name|String
+name|lockFactoryClassName
+parameter_list|,
+name|String
+name|lockDirName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|LockFactory
+name|lockFactory
+decl_stmt|;
+try|try
+block|{
+name|lockFactory
+operator|=
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|lockFactoryClassName
+argument_list|)
+operator|.
+name|asSubclass
+argument_list|(
+name|LockFactory
+operator|.
+name|class
+argument_list|)
+operator|.
+name|newInstance
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalAccessException
+decl||
+name|InstantiationException
+decl||
+name|ClassCastException
+decl||
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot instantiate lock factory "
+operator|+
+name|lockFactoryClassName
+argument_list|)
+throw|;
+block|}
+name|File
+name|lockDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|lockDirName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|lockFactory
+operator|instanceof
+name|FSLockFactory
+condition|)
+block|{
+operator|(
+operator|(
+name|FSLockFactory
+operator|)
+name|lockFactory
+operator|)
+operator|.
+name|setLockDir
+argument_list|(
+name|lockDir
+argument_list|)
+expr_stmt|;
+block|}
+name|lockFactory
+operator|.
+name|setLockPrefix
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+return|return
+name|lockFactory
+return|;
 block|}
 block|}
 end_class
