@@ -86,6 +86,36 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -247,6 +277,28 @@ specifier|private
 name|File
 name|lockDir
 decl_stmt|;
+DECL|field|LOCK_HELD
+specifier|private
+specifier|static
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|LOCK_HELD
+init|=
+name|Collections
+operator|.
+name|synchronizedSet
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+argument_list|)
+decl_stmt|;
 DECL|method|NativeFSLock
 specifier|public
 name|NativeFSLock
@@ -353,6 +405,45 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
+specifier|final
+name|String
+name|canonicalPath
+init|=
+name|path
+operator|.
+name|getCanonicalPath
+argument_list|()
+decl_stmt|;
+comment|// Make sure nobody else in-process has this lock held
+comment|// already, and, mark it held if not:
+comment|// This is a pretty crazy workaround for some documented
+comment|// but yet awkward JVM behavior:
+comment|//
+comment|//   On some systems, closing a channel releases all locks held by the Java virtual machine on the underlying file
+comment|//   regardless of whether the locks were acquired via that channel or via another channel open on the same file.
+comment|//   It is strongly recommended that, within a program, a unique channel be used to acquire all locks on any given
+comment|//   file.
+comment|//
+comment|// This essentially means if we close "A" channel for a given file all locks might be released... the odd part
+comment|// is that we can't re-obtain the lock in the same JVM but from a different process if that happens. Nevertheless
+comment|// this is super trappy. See LUCENE-5738
+name|boolean
+name|obtained
+init|=
+literal|false
+decl_stmt|;
+if|if
+condition|(
+name|LOCK_HELD
+operator|.
+name|add
+argument_list|(
+name|canonicalPath
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
 name|channel
 operator|=
 name|FileChannel
@@ -373,11 +464,6 @@ operator|.
 name|WRITE
 argument_list|)
 expr_stmt|;
-name|boolean
-name|success
-init|=
-literal|false
-decl_stmt|;
 try|try
 block|{
 name|lock
@@ -387,7 +473,7 @@ operator|.
 name|tryLock
 argument_list|()
 expr_stmt|;
-name|success
+name|obtained
 operator|=
 name|lock
 operator|!=
@@ -416,37 +502,44 @@ operator|=
 name|e
 expr_stmt|;
 block|}
+block|}
 finally|finally
 block|{
 if|if
 condition|(
-operator|!
-name|success
+name|obtained
+operator|==
+literal|false
 condition|)
 block|{
-try|try
-block|{
+comment|// not successful - clear up and move out
+name|clearLockHeld
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+specifier|final
+name|FileChannel
+name|toClose
+init|=
+name|channel
+decl_stmt|;
+name|channel
+operator|=
+literal|null
+expr_stmt|;
 name|IOUtils
 operator|.
 name|closeWhileHandlingException
 argument_list|(
-name|channel
+name|toClose
 argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|channel
-operator|=
-literal|null
 expr_stmt|;
 block|}
 block|}
 block|}
 return|return
-name|lock
-operator|!=
-literal|null
+name|obtained
 return|;
 block|}
 annotation|@
@@ -469,6 +562,8 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+block|{
 name|lock
 operator|.
 name|release
@@ -479,20 +574,24 @@ operator|=
 literal|null
 expr_stmt|;
 block|}
+finally|finally
+block|{
+name|clearLockHeld
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|channel
-operator|!=
-literal|null
-condition|)
-block|{
-name|channel
+name|IOUtils
 operator|.
 name|close
-argument_list|()
+argument_list|(
+name|channel
+argument_list|)
 expr_stmt|;
 name|channel
 operator|=
@@ -500,6 +599,37 @@ literal|null
 expr_stmt|;
 block|}
 block|}
+DECL|method|clearLockHeld
+specifier|private
+specifier|static
+specifier|final
+name|void
+name|clearLockHeld
+parameter_list|(
+name|File
+name|path
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|boolean
+name|remove
+init|=
+name|LOCK_HELD
+operator|.
+name|remove
+argument_list|(
+name|path
+operator|.
+name|getCanonicalPath
+argument_list|()
+argument_list|)
+decl_stmt|;
+assert|assert
+name|remove
+operator|:
+literal|"Lock was cleared but never marked as held"
+assert|;
 block|}
 annotation|@
 name|Override
